<resources>
    <string name="app_name">YS Music Player</string>
    <string name="sunday">sun</string>
    <string name="monday">mon</string>
    <string name="tuesday">tue</string>
    <string name="wednesday">wed</string>
    <string name="thursday">thu</string>
    <string name="friday">fri</string>
    <string name="saturday">sat</string>

    <string name="label">Label</string>

    <string name="repeat">REPEAT</string>
    <string name="hour">h</string>
    <string name="minute">m</string>
    <string name="left">left</string>
    <string name="widget_name">YS Music Player</string>
    <string name="loudness_enhancer">LOUDNESS ENHANCER</string>
    <string name="song">SONG</string>
    <string name="duration">DURATION</string>

    <string name="playList">PLAYLIST</string>
    <string name="alarm">ALARM</string>
    <string name="equalizer">EQUALIZER</string>
    <string name="custom">CUSTOM</string>

    <string name="preset">PRESET</string>
    <string-array name="days_array">
        <item>sun</item>
        <item>mon</item>
        <item>tue</item>
        <item>wed</item>
        <item>thu</item>
        <item>fri</item>
        <item>sat</item>
    </string-array>
    <string name="access_restricted">access denied to directory: </string>
    <string name="notSupported">Not supported</string>
    <string name="selectPlaylist">select playlist to load</string>
    <string name="InternalStorage">Internal Storage</string>
    <string name="SDCard">SD Card</string>
    <string name="buffering">buffering...</string>
    <string name="networkUnavailable">network unavailable</string>
    <string name="pleaseRateThisApp">Please take a moment to rate this app</string>
    <string name="alreadyRated">already rated</string>
    <string name="remindMeLater">remind me later</string>
    <string name="rate">Rate</string>
    <string name="aPlaylistWithTheSameNameAlreadyExists">A playlist with the same name already exists</string>
    <string name="def">Default</string>
    <string name="newPlaylist">New playlist</string>
    <string name="error">Error</string>

</resources>
