<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:padding="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="5dp">

        <LinearLayout
            android:id="@+id/equalizers_panel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="right|center_horizontal"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@drawable/display"
            android:baselineAligned="true"
            android:orientation="horizontal"
            android:padding="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1.5"
            android:background="@drawable/panel_flat"
            android:orientation="horizontal"
            android:padding="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.5"
                android:gravity="center_horizontal|center_vertical"
                android:orientation="vertical">

                <com.ys.musicplayer.custom_views.RotaryKnob
                    android:id="@+id/loudness_enhancer_knob"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:rotation="45"
                    android:scaleType="fitCenter"
                    android:visibility="visible" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/loudness_enhancer"
                    android:textAlignment="center"
                    android:textSize="12sp"
                    android:visibility="gone" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center_horizontal|center_vertical"
                            android:maxLines="1"
                            android:padding="5dp"
                            android:singleLine="false"
                            android:text="@string/equalizer"
                            app:autoSizeMaxTextSize="15sp"
                            app:autoSizeMinTextSize="8sp"
                            app:autoSizeTextType="uniform" />

                        <FrameLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="2">

                            <com.ys.musicplayer.custom_views.SwitchCustom
                                android:id="@+id/equalizerSwitch"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:thumb="@drawable/thumb"
                                app:splitTrack="false"
                                app:track="@drawable/switch_selector" />
                        </FrameLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center_horizontal|center_vertical"
                            android:maxLines="2"
                            android:padding="5dp"
                            android:singleLine="false"
                            android:text="@string/loudness_enhancer"
                            app:autoSizeMaxTextSize="15sp"
                            app:autoSizeMinTextSize="8sp"
                            app:autoSizeTextType="uniform" />

                        <FrameLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="2">

                            <com.ys.musicplayer.custom_views.SwitchCustom
                                android:id="@+id/loudnesSwitch"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:thumb="@drawable/thumb"
                                app:splitTrack="false"
                                app:track="@drawable/switch_selector" />
                        </FrameLayout>

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="3"
                        android:gravity="center_vertical"
                        android:singleLine="false"
                        android:text="@string/preset"
                        android:textAlignment="center"
                        app:autoSizeMaxTextSize="12sp"
                        app:autoSizeMinTextSize="8sp"
                        app:autoSizeTextType="uniform" />

                    <Spinner
                        android:id="@+id/presetsSpinner"
                        style="@style/Widget.AppCompat.Spinner.DropDown"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_marginBottom="2dp"
                        android:layout_weight="1"
                        android:background="@drawable/button_space" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</FrameLayout>